--- a/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
+++ b/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
@@ -15,4 +15,10 @@
     <Folder Include="Responses\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjectionFixed" Version="5.1.2" />
+  </ItemGroup>
+
 </Project>
