--- a/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
+++ b/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <Folder Include="DTOs\LeaveAllocation\Validators\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Features\" />
     <Folder Include="Persistence\" />
