--- a/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
+++ b/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
@@ -10,7 +10,6 @@
     <Folder Include="DTOs\LeaveAllocation\Validators\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Features\" />
-    <Folder Include="Persistence\" />
     <Folder Include="Profiles\" />
     <Folder Include="Responses\" />
   </ItemGroup>
@@ -19,6 +18,10 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjectionFixed" Version="5.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PS.LeaveManagement.Domain\PS.LeaveManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
