Добавил структуру для Features LeaveRequest

--- a/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
+++ b/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\LeaveRequests\" />
     <Folder Include="Features\LeaveAllocations\" />
+    <Folder Include="Features\LeaveRequests\Handler\Queries\" />
+    <Folder Include="Features\LeaveRequests\Handler\Commands\" />
+    <Folder Include="Features\LeaveRequests\Request\Queries\" />
+    <Folder Include="Features\LeaveRequests\Request\Commands\" />
     <Folder Include="Profiles\" />
   </ItemGroup>
 
