ПОдготовка к реализация LeavedAllocation

--- a/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
+++ b/PS.ApplicationCQRS/PS.LeaveManagement.Application/PS.LeaveManagement.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\LeaveAllocations\" />
+    <Folder Include="Features\LeaveAllocations\Handler\Queries\" />
     <Folder Include="Profiles\" />
   </ItemGroup>
 
